<resources>
    <string name="app_name">Chat</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="dont_have_account">Do not have an account?</string>
    <string name="reset">Reset</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_title">Trouble Logging In?</string>
    <string name="reset_password_text">Enter your email and we will send you a link to get back into your account.
    </string>
    <string name="or">or</string>
    <string name="invalid_email">Invalid Email!!!</string>
    <string name="invalid_password">Invalid Password!!!(The password must be at least 8 characters long and not more
        than 32 and consist of [A-Z],[a-z],[0-9],[_],[.]).
    </string>
    <string name="invalid_username">Invalid Username!!!(The username must be at least 3 characters long and not more
        than 32 and consist of [A-Z],[a-z],[0-9],_).
    </string>
    <string name="not_sign_in_error_text">The data you entered does not belong to an account. Please check your data and
        try again.
    </string>
    <string name="not_sign_up_error_text">Account with this email already exist.</string>
    <string name="verify_email_dialog_title">Verify Email</string>
    <string name="verify_email_dialog_text">We will send you by mail a link to verify your email.</string>
    <string name="verify_email_dialog_error_text">Email has not been confirmed!!!</string>
    <string name="reset_password_dialog_title">Reset Password</string>
    <string name="reset_password_dialog_text">We will send you by mail a link to reset your password.</string>
    <string name="verify">Verify</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>

    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="reply">Reply</string>
    <string name="forward">Forward</string>
    <string name="message">Message</string>
    <string name="contacts">Contacts</string>
    <string name="close">Close</string>
    <string name="template_username">ryu99</string>
    <string name="template_email">romanyu1999@gmail.com</string>
    <string name="template_name_file">Head first Android Development for Beginners.pdf</string>
    <string name="template_last_message">Hello,how are you to day, what are you doing now?</string>
    <string name="template_how_message">78</string>
    <string name="template_number">9</string>
    <string name="create_chat">Create Chat</string>
    <string name="create_group_chat">Create Group Chat</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="loading">Loading&#8230;</string>
    <string name="template_date">10:03</string>

    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>

    <string name="temp_number">13</string>
    <string name="send">Send</string>
    <string name="hide">Hide</string>

    <string name="gallery">Gallery</string>

    <string name="no_chats">You have no chats</string>
    <string name="no_users">Users is not found</string>
    <string name="no_messages">You dont have messages</string>
</resources>
