<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background">
        <TextView android:id="@+id/verify_title"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/verify_email_dialog_title"
                  android:textColor="@color/colorPrimary"
                  android:textSize="24dp"
                  android:textStyle="bold"
                  android:padding="15dp"/>
    <ProgressBar android:id="@+id/progress_bar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_margin="10dp"
                 android:indeterminateTint="@color/colorPrimary"/>
    <TextView android:id="@+id/verify_text"
              android:layout_below="@+id/verify_title"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/verify_email_dialog_text"
              android:textColor="@color/darkGrey"
              android:textSize="18dp"
              android:padding="15dp"/>
    <TextView android:id="@+id/verify_error_text"
              android:layout_below="@+id/verify_text"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:visibility="gone"
              android:text="@string/verify_email_dialog_error_text"
              android:textColor="@android:color/holo_red_dark"
              android:textAlignment="center"
              android:textSize="18dp"
              android:padding="3dp"/>
    <Button android:id="@+id/cancel_button"
            android:layout_below="@+id/verify_error_text"
            android:layout_toLeftOf="@+id/verify_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/button_template_2"
    />
    <Button android:id="@+id/verify_button"
            android:layout_below="@+id/verify_error_text"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/verify"
            android:textColor="@android:color/white"
            android:background="@drawable/button_template"
    />
</RelativeLayout>