<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background">
    <TextView android:id="@+id/reset_title"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/reset_password_dialog_title"
              android:textColor="@color/colorPrimary"
              android:textSize="24sp"
              android:textStyle="bold"
              android:padding="15dp"/>
    <TextView android:id="@+id/reset_text"
              android:layout_below="@+id/reset_title"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/reset_password_dialog_text"
              android:textColor="@color/darkGrey"
              android:textSize="18sp"
              android:padding="15dp"/>
    <Button android:id="@+id/ok_button"
            android:layout_below="@+id/reset_text"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/ok"
            android:textColor="@android:color/white"
            android:background="@drawable/button_template"
    />
</RelativeLayout>