<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ResetPasswordActivity">
    <include android:id="@+id/toolbar"
             layout="@layout/toolbar"/>
    <ScrollView
            style="@style/AuthScrollView"
    >
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp">
        <TextView android:id="@+id/reset_password_header"
                  style="@style/AuthHeader"
        />
        <TextView android:id="@+id/reset_password_title"
                  android:layout_below="@id/reset_password_header"
                  style="@style/ResetPasswordTitle"/>
        <TextView android:id="@+id/reset_password_text"
                  android:layout_below="@id/reset_password_title"
                  style="@style/ResetPasswordText"/>
        <android.support.design.widget.TextInputLayout
                android:id="@+id/email_input"
                style="@style/TextInputLayout"
                android:layout_below="@+id/reset_password_text"
                app:errorEnabled="true">
            <EditText
                    android:id="@+id/email_edit_text"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    style="@style/AuthEditText"/>
        </android.support.design.widget.TextInputLayout>
        <Button
                android:id="@+id/reset_button"
                android:text="@string/reset"
                android:layout_below="@+id/email_input"
                style="@style/ButtonTemplate"
                android:stateListAnimator="@animator/button_animation"
        />
        <TextView android:id="@+id/or"
                  android:layout_below="@id/reset_button"
                  style="@style/OrText"/>
        <Button
                android:id="@+id/sign_up_button"
                android:text="@string/sign_up"
                android:layout_below="@+id/or"
                style="@style/ButtonTemplate2"
        />
    </RelativeLayout>
    </ScrollView>
</RelativeLayout>