<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="5dp"
        android:background="@color/colorPrimary">
    <RelativeLayout
            android:id="@+id/user_info_block"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:visibility="visible">
        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_photo"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="15dp"
                android:elevation="3dp"
                app:civ_border_width="0dp"
                android:src="@drawable/placeholder_avatar"
        />
        <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/template_username"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="3dp"
                android:layout_marginStart="15dp"
                android:layout_below="@+id/profile_photo"
                android:layout_gravity="center"/>
        <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/template_email"
                android:textColor="@color/darkGrey"
                android:layout_below="@id/username"
                android:layout_marginStart="15dp"/>
    </RelativeLayout>
    <LinearLayout
            android:id="@+id/loading_block"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:gravity="center">
        <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@android:color/white"
        />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textSize="24sp"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:layout_margin="10dp"/>
    </LinearLayout>
</RelativeLayout>