<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_template_1"
        tools:context=".SingleChatActivity">
    <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:elevation="5dp">
        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                android:theme="@style/ToolbarTheme"
                app:titleTextColor="@android:color/white">
            <RelativeLayout
                    android:id="@+id/companion_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">
                <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_photo"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/placeholder_avatar"/>
                <TextView
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:text="@string/template_username"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="15dp"
                        android:layout_toEndOf="@id/profile_photo"
                        style="@style/CutTextView"/>
                <TextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:text="@string/template_email"
                        android:textSize="14sp"
                        android:layout_marginStart="10dp"
                        android:layout_below="@id/username"
                        android:layout_toEndOf="@id/profile_photo"
                        android:layout_marginEnd="15dp"
                        style="@style/CutTextView"/>
            </RelativeLayout>

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <android.support.v7.widget.RecyclerView
            android:id="@+id/messages_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/app_bar"
            android:layout_above="@id/send_message_block"/>
    <ProgressBar android:id="@+id/messages_progress_bar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:indeterminateTint="@color/colorPrimary"/>
    <TextView android:id="@+id/empty_content_warning"
              android:visibility="gone"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/no_messages"
              android:gravity="center"
              android:layout_centerInParent="true"
              android:textSize="18sp"/>
    <RelativeLayout
            android:id="@+id/send_message_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_alignParentBottom="true">
        <EditText
                android:id="@+id/message_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="5"
                android:hint="@string/message"
                android:textSize="18sp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:layout_marginLeft="13dp"
                android:layout_toLeftOf="@id/attach_photo_button"
                android:textColor="@color/colorPrimary"
                android:background="@android:color/transparent"/>
        <ImageButton android:id="@+id/attach_photo_button"
                     android:layout_width="36dp"
                     android:layout_height="44dp"
                     android:background="@android:color/transparent"
                     android:visibility="visible"
                     android:src="@drawable/ic_attach_photo"
                     android:layout_marginEnd="36dp"
                     android:layout_alignParentEnd="true"/>
        <ImageButton android:id="@+id/attach_file_button"
                     android:layout_width="36dp"
                     android:layout_height="44dp"
                     android:background="@android:color/transparent"
                     android:visibility="visible"
                     android:src="@drawable/ic_attach_file"
                     android:layout_alignParentEnd="true"/>
        <ImageButton android:id="@+id/send_button"
                     android:layout_width="36dp"
                     android:layout_height="44dp"
                     android:background="@android:color/transparent"
                     android:visibility="gone"
                     android:src="@drawable/ic_send"
                     android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/gallery_block"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue_transparent"
            android:gravity="bottom"
            android:visibility="gone">
        <RelativeLayout android:id="@+id/bottom_sheet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white">
            <android.support.v7.widget.RecyclerView
                    android:id="@+id/gallery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:padding="3dp"/>
            <Button
                    android:id="@+id/gallery_send_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_below="@id/gallery"
                    android:layout_margin="5dp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/button_template"
                    android:text="@string/send"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"/>
            <Button
                    android:id="@+id/gallery_hide_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:layout_below="@id/gallery"
                    android:layout_margin="5dp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/button_template"
                    android:text="@string/hide"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>